# BoyerMoore-DontCare

./: .gitignore  .gitmodules  BadCharTable.cpp  BadCharTable.hpp  BadCharTableDontCare.cpp  BadCharTableDontCare.hpp  BoyerMoore-DontCare.txt  BoyerMoore.cpp  BoyerMoore.hpp  BoyerMooreDontCare.cpp  BoyerMooreDontCare.hpp  CMakeLists.txt  CMakeSettings.json  ForwardList.hpp  GoodSuffixTable.cpp  GoodSuffixTableDontCare.cpp  MatchOrder.cpp  MatchOrder.hpp  README.md  Signature.hpp  Utility.cpp  Utility.hpp  main.cpp
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  haystack_small.hpp  main.cpp
src/BoyerMooreDontCare/: BadCharTable.cpp  BadCharTable.hpp  BadCharTableDontCare.cpp  BadCharTableDontCare.hpp  BoyerMoore-BadChar-tablelayout.txt  BoyerMoore-DontCare.txt  BoyerMoore.cpp  BoyerMoore.hpp  BoyerMoore.ipp  BoyerMooreDontCare.cpp  ExtendedStrongGoodSuffixTable.hpp  GoodSuffixTable.cpp  GoodSuffixTable.hpp  GoodSuffixTableDontCare.cpp  GoodSuffixTableDontCare.hpp  MatchOrder.cpp  Signature.hpp  Utility.cpp  Utility.hpp
